# SimScript_Compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
docs/: DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_STATUS.md  README.md  syntax.md
src/: main.cpp
src/codegen/: codegen.cpp  codegen.h
src/debug/: debug.c  debug.h  debug_runtime.c  debug_runtime.h  graph.c  graph.h
src/frontend/: ast.c  ast.h  lexer.l  parser.y  symbol_table.c  symbol_table.h
src/stdlib/data_structures/: queue.c  queue.h  resource.c  resource.h  set.c  set.h
src/stdlib/math/: random.c  random.h  statistics.c  statistics.h
src/stdlib/time_simulation/: time_simulation.c  time_simulation.h
